--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background-color: #717171;
+    font-family: serif;
+}
+
+a,
+a:hover {
+    text-decoration: none;
+    color: unset;
+}
