--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,3 +1,4 @@
 <div class="navbar__container">
-    teste
+    <span class="navbar__title" (click)="goToMainPage()">DSMovie</span>
+    <a class="navbar__go_to_github" href="https://github.com/C1sc0K1d" target="_blank"><img class="navbar__git_logo" src="assets/shared/icons/git-logo.svg" alt="git logo"> /C1sc0K1d</a>
 </div>
