--- a/src/app/movies-list/movies-list.component.html
+++ b/src/app/movies-list/movies-list.component.html
@@ -1,3 +1,11 @@
-<p class="test">
-    movies-list works!
-</p>
+<div class="movies-list__container">
+    <div class="movies-list__page_navigation">
+        <button class="movies-list__navigate_butons" (click)="previusMoviesList()">
+      <span class="movies-list__arrowhead" style="left: 12px;"> &#8249;</span>
+    </button>
+        <span class="movies-list__page_number"> 1 de 23</span>
+        <button class="movies-list__navigate_butons" (click)="nextMoviesList()">
+      <span class="movies-list__arrowhead" style="left: 13px"> &#8250; </span>
+    </button>
+    </div>
+</div>
