--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,7 @@
     margin: 0;
     padding: 0;
     border: 0;
-    background-color: #717171;
-    font-family: serif;
+    font-family: sans-serif;
 }
 
 a,
