--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
-<div style="margin-top: 60px;">
-    <router-outlet></router-outlet>
+<div style="margin-top: 60px; position: relative; min-height: 100% !important; height: 100%;">
+    <router-outlet style="min-height: 100% !important; height: 100%;"></router-outlet>
 </div>
