--- a/src/app/movies-list/movies-list.component.scss
+++ b/src/app/movies-list/movies-list.component.scss
@@ -56,18 +56,22 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
     margin: 0 auto;
-    width: 100%;
+    flex: 0 1 auto;
+    width: 95%;
+    max-width: 2000px;
 }
 
 .movies-list__movie_container {
     display: flex;
     align-items: center;
     flex-direction: column;
+    flex: 0 1 auto;
     width: 280px;
     height: 380px;
-    margin: 20px;
+    margin: 20px 10px;
     background-color: white;
 }
 
@@ -77,6 +81,7 @@
     background-color: #4D41C0;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .movies-list__movie_datas {
