--- a/src/app/movies-list/movies-list.component.scss
+++ b/src/app/movies-list/movies-list.component.scss
@@ -84,6 +84,10 @@
     justify-content: center;
 }
 
+.movies-list__image {
+    width: 34.5%;
+}
+
 .movies-list__movie_datas {
     padding: 0 15px;
     display: flex;
