--- a/src/app/movies-list/movie/movie.component.scss
+++ b/src/app/movies-list/movie/movie.component.scss
@@ -49,6 +49,15 @@
     padding-bottom: 12px;
 }
 
+.movie__rating_form {
+    height: 37%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .movie__inputs {
     display: flex;
     align-items: center;
@@ -56,10 +65,12 @@
     width: 100%;
     margin: auto;
     padding: 0 20px;
+    flex: 1 1;
 }
 
 .movie__email_input {
     display: flex;
+    flex: 1 1;
     align-items: flex-start;
     flex-direction: column;
     width: 100%;
@@ -70,7 +81,7 @@
         font-size: 12px;
         line-height: 16px;
         color: #AAAAAA;
-        margin-bottom: 3px;
+        padding-top: 2%;
     }
     input {
         border: 1px solid #9E9E9E;
@@ -85,53 +96,52 @@
 
 .movie__rating_input {
     display: flex;
+    flex: 1 1;
     align-items: center;
     flex-direction: column;
     width: 100%;
-    flex-shrink: 1;
-    flex-grow: 1;
+    height: 45%;
     margin-top: 8px;
     text-align: left;
     div {
         display: flex;
-        align-items: flex-start;
-        align-items: center;
+        align-items: baseline;
         width: 100%;
-        flex-shrink: 1;
-        flex-grow: 1;
+        flex: 1 1;
     }
     span {
         font-size: 12px;
         line-height: 16px;
         color: #AAAAAA;
-        margin-bottom: 3px;
         text-align: left;
+        padding-top: 2%;
+        flex: 1 1;
     }
     label {
         font-size: 18px;
-        margin-right: 10px;
-        padding-left: 8px;
+        flex: 1 1;
     }
     input {
         width: 12px;
         height: 12px;
+        flex: 1 1;
     }
 }
 
 .movie__buttons {
     display: flex;
+    flex: 1 1;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 0 20px;
     margin-bottom: auto;
-    height: 14%;
+    height: 45%;
     width: 100%;
 }
 
 .movie__button {
-    width: 40%;
-    height: 35%;
+    width: 35%;
+    height: 25%;
     border-radius: 4px;
     background-color: #4D41C0;
     color: white;
@@ -139,6 +149,7 @@
     line-height: 21px;
     font-weight: 700;
     margin: 10px auto;
+    flex: 1 1;
 }
 
 .movie__button:hover {
@@ -149,4 +160,14 @@
 .movie__button:active {
     transform: scale(0.98);
     box-shadow: 0 transparent;
+}
+
+.movie__button:disabled {
+    background-color: #9E9E9E;
+    color: black;
+}
+
+.movie__button:disabled:hover {
+    transform: scale(1);
+    box-shadow: 1px 1px 2px 1px transparent;
 }
